# APEX

./: .dockerignore  .env  .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  AI_RULES.md  CHANGELOG.md  CLAUDE.md  MANAGED_AGENTS_PLAYBOOK.md  MANIFEST.md  Makefile  README.md  patch.py  prompt_phase3.md  prompt_phase4.md  pyproject.toml  repomix.config.json  requirements-connectors-alpaca.txt  requirements-connectors-ibkr.txt  requirements-connectors-polygon.txt  requirements-dev.txt  requirements.txt
.claude/: README.md  settings.json  settings.local.json
.claude/hooks/: git_state.py  graphify_hint.py  protect_files.py  pytest_calculator.py  ruff_check.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/PULL_REQUEST_TEMPLATE/: quant.md
.github/agents/: apex-config.agent.md  apex-data.agent.md  apex-qa.agent.md  apex-quant.agent.md  apex-sre.agent.md
.github/workflows/: backtest.yml  cd.yml  cd.yml.disabled  ci-backtest-gate.yml  ci-integration-tests.yml  ci-quality.yml  ci-rust.yml  ci-unit-tests.yml  ci.yml
.hypothesis/constants/: 09fc23090f4ca7b1  0b870b04b5a54e01  0cfa12dfbf9e9abb  10bdf10c323c85ee  1255c99881626717  151d3a2c1725a217  176a39aee7fba8e5  1af0df8894eed81a  202092210cf21b2a  209ef2f2731b2c71  2738dfe0ad7e3504  2cc24d35e9100412  2f79bd0ab23b763c  31f9a2fefdd86d58  34ad96e2c9b46d32  3651a6fb753abcf1  375d2baa1c5c4783  37962b8ede7db716  3b581a03c9382962  4340b80aa45dd0a5  45080f44cb94561f  4666233e7cec9b7a  4861a8e32f8a8e4e  4895a1db3e1a415e  49c28ee8dfae7bb6  4c2a92b9f025600d  4cde1314a998c5b4  4fde2ae52951bc52  556f2bdd1c7382fa  57634adb040aa45e  59905afb92aac3c4  5c03172a6c3edb02  662819548797e84c  71489d8e944df3ff  7422be7882bca783  754d77696d18c9df  7866a44ce3a42059  7a08af48a72abd4c  7add0a9218df9621  7fb2e973301b083b  (+31 more)
backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  walk_forward.py
benchmarks/: README.md  pyproject_additions.toml
benchmarks/python/: __init__.py  bench_cvd.py  bench_har_rv.py  bench_kelly_sizer.py  bench_kyle_lambda.py  bench_ofi.py  bench_risk_chain.py  conftest.py
benchmarks/results/: baseline_2026-04-21.md
config/: strategies.example.yaml
connectors/: README.md  __init__.py  protocol.py  types.py
connectors/alpaca/: README.md  __init__.py  config.example.yaml  connector.py
connectors/ibkr/: README.md  __init__.py  config.example.yaml  connector.py
connectors/polygon/: README.md  __init__.py  config.example.yaml  connector.py
connectors/tests/: __init__.py  test_alpaca_init.py  test_ibkr_init.py  test_polygon_init.py  test_protocol.py
core/: __init__.py  base_service.py  bus.py  config.py  db.py  logger.py  service_runner.py  state.py  topics.py  zmq_broker.py
core/data/: timescale_repository.py
core/math/: fractional_diff.py  labeling.py
core/models/: __init__.py  data.py  order.py  regime.py  signal.py  tick.py
db/migrations/: 001_apex_initial_schema.sql  001_universal_schema.sql  002_feature_store.sql  README.md
docker/: Dockerfile.service  docker-compose.test.yml  docker-compose.yml  prometheus.yml
docs/: ACADEMIC_REFERENCES.md  ARCHITECTURE.md  GLOSSARY.md  ONBOARDING.md  ORCHESTRATOR_PLAYBOOK.md  PROJECT_ROADMAP.md  observability.md  phase_3_closure_report.md  phase_4_closure_report.md
docs/CONVENTIONS/: COMMIT_MESSAGES.md
docs/adr/: 0001-zmq-broker-topology.md  0002-quant-methodology-charter.md  ADR-0003-universal-data-schema.md  ADR-0004-feature-validation-methodology.md  ADR-0005-meta-labeling-fusion-methodology.md  ADR-0006-fail-closed-risk-controls.md  ADR-0007-strategy-as-microservice.md  ADR-0008-capital-allocator-topology.md  ADR-0009-panel-builder-discipline.md  ADR-0010-target-topology-reorganization.md  ADR-0011-decoded-replication-validation-harness.md  ADR-0012-multi-strategy-netting-and-sub-books.md  ADR-0013-capital-allocation-trajectory.md  ADR-0014-timescaledb-schema-v2.md
docs/adr_pending_roadmap_v3/: ADR-0007-strategy-as-microservice.md  ADR-0010-target-topology-reorganization.md
docs/audits/: 2026-04-08-quant-scaffolding-inventory.md  AUDIT_2026_04_11_WHOLE_CODEBASE.md  CICD_RESET_AUDIT_2026-04-21.md  META_AUDIT_2026_04_11_GOVERNANCE.md  MULTI_STRAT_READINESS_AUDIT_2026-04-18.md  POSITION_KEY_AUDIT_2026-04-21.md  REDIS_KEYS_WRITER_AUDIT_2026-04-17.md  SESSION_MACRO_SHIMS_AUDIT_2026-04-21.md  STRATEGIC_AUDIT_2026-04-17_PHASE_5_AND_GLOBAL.md  TIMESCALEDB_AUDIT_2026-04-20.md  TRADES_KEY_WRITER_AUDIT_2026-04-20.md  TRADES_READERS_MIGRATION_2026-04-23.md  TRADES_WRITER_IMPL_2026-04-23.md
docs/claude_memory/: CONTEXT.md  DECISIONS.md  PHASE_3_NOTES.md  PHASE_4_NOTES.md  SESSIONS.md
docs/examples/: model_card_v1_example.json
docs/grafana/: apex_overview.json
docs/issues_backlog/: issue_alt_data_nlp.md  issue_dma_research.md  issue_event_sourcing.md  (+4 more)
features/: __init__.py  base.py  exceptions.py  fracdiff.py  labels.py  multicollinearity.py  orthogonalizer.py  pipeline.py  registry.py  versioning.py  weights.py
reports/: phase_4_leakage_audit.md
rust/: Cargo.toml
rust/apex_mc/: Cargo.toml
rust/apex_mc/src/: lib.rs
rust/apex_risk/: Cargo.toml
rust/apex_risk/src/: exposure.rs  lib.rs
rust/benches/: Cargo.toml
rust/benches/benches/: cvd.rs  kyle_lambda.rs  ofi.rs
rust/benches/src/: lib.rs
scripts/: __init__.py  _backfill_common.py  _download_calendar_fixtures.py  _download_fundamentals_fixtures.py  _download_macro_fixtures.py  _download_yahoo_fixture.py  backfill_binance.py  backfill_calendar.py  backfill_equities.py  backfill_fundamentals.py  backfill_macro.py  backfill_yahoo.py  backtest_regression.py  download_history.py  generate_phase_3_12_report.py  generate_phase_4_3_report.py  generate_phase_4_4_report.py  generate_phase_4_5_report.py  generate_phase_4_6_report.py  generate_phase_4_7_report.py  generate_phase_4_8_report.py  generate_test_fixtures.py  init_db.py  preflight.ps1  smoke_broker.py  validate_setup.py
services/: __init__.py
supervisor/: __init__.py  orchestrator.py  watchdog.py
tests/: __init__.py
(+617 files in other folders)
