[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","W","F","I","N","UP","ANN","S","B","A","C4","PT","RUF"]
ignore = ["S101"]
# Allow intentional mathematical/scientific Unicode in docstrings and comments.
# These are used throughout quant formulas (σ=volatility, α=alpha, μ=mean, ×=multiply, etc.)
allowed-confusables = ["\u00d7","\u2212","\u03b1","\u03b2","\u03b3","\u03bc","\u03c1","\u03c3","\u221a","\u2192","\u2190"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN","S"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "pyarrow.*",
    "pandas_ta.*",
    "binance.*",
    "yfinance.*",
    "fredapi.*",
    "apex_mc.*",
    "apex_risk.*",
    "websockets.*",
    "uvicorn.*",
    "fakeredis.*",
    "numba.*",
    "curl_cffi.*",
    "aiohttp.*",
    "pydantic.*",
    "pydantic_settings.*",
    "fastapi.*",
    "starlette.*",
    "pytest.*",
    "_pytest.*",
    "hypothesis.*",
    "alpaca.*",
    "redis.*",
    "zmq.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "core.models.*",
    "core.config",
    "tests.*",
    "services.s10_monitor.dashboard",
]
disable_error_codes = ["misc", "untyped-def", "no-untyped-def"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=services",
    "--cov=core",
    "--cov=backtesting",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
    "--timeout=30",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas_ta",
    "ignore::DeprecationWarning:binance",
    "ignore::DeprecationWarning:pydantic",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "docker/*",
    "rust/*",
    "**/__init__.py",
    # Service entry-points and infrastructure not under unit test
    "services/*/service.py",
    "supervisor/*",
    # Modules scheduled for Phase 3 testing
    "services/s01_data_ingestion/feed_*.py",
    "services/s01_data_ingestion/broker_*.py",
    "services/s06_execution/broker_*.py",
    "services/s06_execution/order_manager.py",
    "services/s07_quant_analytics/monte_carlo.py",
    "services/s07_quant_analytics/performance.py",
    "services/s07_quant_analytics/microstructure_adv.py",
    "services/s07_quant_analytics/regime_ml.py",
    "services/s08_macro_intelligence/geopolitical.py",
    "services/s08_macro_intelligence/sector_rotation.py",
    "services/s09_feedback_loop/drift_detector.py",
    "services/s09_feedback_loop/signal_quality.py",
    "services/s10_monitor/*",
]
branch = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]
