[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".claude",
    ".venv",
    "rust/target",
    "data",
    "logs",
]

[tool.ruff.lint]
select = ["E","W","F","I","N","UP","ANN","S","B","A","C4","PT","RUF"]
ignore = ["S101"]
# Allow intentional mathematical/scientific Unicode in docstrings and comments.
# These are used throughout quant formulas (σ=volatility, α=alpha, μ=mean, ×=multiply, etc.)
allowed-confusables = ["\u00d7","\u2212","\u03b1","\u03b2","\u03b3","\u03bc","\u03c1","\u03c3","\u221a","\u2192","\u2190"]

[tool.ruff.lint.per-file-ignores]
# Tests freely use ``assert`` and skip type annotations.
# RUF059/F841: pytest fixtures and risk-chain helpers regularly return
# 3-tuples whose extra elements are inspected in some tests but not all
# — flagging that as "unused" only adds noise.
"tests/**" = ["ANN", "S", "RUF059", "F841", "E501"]
# Dashboard contains a large HTML/JS template string. Long lines and
# trailing whitespace inside that template are intentional and must be
# preserved for the JS to keep working.
"services/s10_monitor/dashboard.py" = ["E501", "S104", "W291", "W293"]
# Backtesting walk-forward: helper variables are kept for clarity even
# when not consumed downstream by every code path.
"backtesting/walk_forward.py" = ["F841"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "^\\.claude/",
    "^\\.venv/",
    "^rust/target/",
    "^data/",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "pyarrow.*",
    "websockets.*",
    "uvicorn.*",
    "aiohttp.*",
    "pydantic.*",
    "pydantic_settings.*",
    "fastapi.*",
    "starlette.*",
    "pytest.*",
    "_pytest.*",
    "hypothesis.*",
    "alpaca.*",
    "redis.*",
    "zmq.*",
    "fredapi.*",
    "boto3.*",
    "botocore.*",
    "fakeredis.*",
    "tqdm.*",
    "yfinance.*",
    "apex_mc.*",
    "scipy.*",
    "defusedxml.*",
    "asyncpg.*",
    "bs4.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "core.models.*",
    "core.config",
    "tests.*",
    "services.s10_monitor.dashboard",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (TimescaleDB, etc.)",
    "network: tests requiring network access (downloads, API calls)",
]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas_ta",
    "ignore::DeprecationWarning:binance",
    "ignore::DeprecationWarning:pydantic",
    "ignore::DeprecationWarning:hypothesis",
    "ignore::DeprecationWarning:websockets",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "docker/*",
    "rust/*",
    "**/__init__.py",
    # Service entry-points: require ZMQ/Redis runtime, not unit-testable
    "services/*/service.py",
    "supervisor/*",
    # ZMQ/network infrastructure (require live connections)
    "core/base_service.py",
    "core/bus.py",
    # Backtest engine and data loader (integration-only, not unit tests)
    "backtesting/engine.py",
    "backtesting/data_loader.py",
    # Data feeds and brokers (require live API connections)
    "services/s01_data_ingestion/*.py",
    "services/s06_execution/broker_*.py",
    "services/s06_execution/order_manager.py",
    # Complex signal modules not yet unit-tested
    "services/s02_signal_engine/crowd_behavior.py",
    "services/s02_signal_engine/mtf_aligner.py",
    # Calendar and guard modules (integration-level)
    "services/s03_regime_detector/cb_calendar.py",
    "services/s05_risk_manager/cb_event_guard.py",
    "services/s05_risk_manager/exposure_monitor.py",
    # Heavy analytics (Monte Carlo, GARCH) - require special deps
    "services/s07_quant_analytics/monte_carlo.py",
    "services/s07_quant_analytics/performance.py",
    "services/s07_quant_analytics/microstructure_adv.py",
    # Macro intel - geopolitical and sector rotation (data-source dependent)
    "services/s08_macro_intelligence/geopolitical.py",
    "services/s08_macro_intelligence/sector_rotation.py",
    "services/s10_monitor/*",
]
branch = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "scripts",
    ".venv",
    ".claude",
    "rust/target",
    "data",
]
# B101: assert (used in tests)
# B104: hardcoded bind-all-interfaces (the dashboard intentionally listens
#       on 0.0.0.0 inside the container; the deploy is firewalled).
skips = ["B101", "B104"]
